start matchtm subpackage for typemap-based matchers.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "krelinga",
+        "matchtm",
         "matchutil",
-        "sebdah"
+        "sebdah",
+        "typemap"
     ]
 }
