--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "cSpell.words": [
         "krelinga",
         "matchtm",
-        "matchutil",
+        "matchfmt",
         "sebdah",
         "typemap"
     ]
